api_versioned_docs/version-12.0.0-rc1/avalonia/threading/index.mdx
---
title: 'Avalonia.Threading'
hide_title: true
slug: '/avalonia/threading'
uid: 'Avalonia.Threading'
commentId: 'N:Avalonia.Threading'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Threading'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Threading Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Threading`

</div>

## Types

- [AvaloniaSynchronizationContext](avaloniasynchronizationcontext.mdx) - SynchronizationContext to be used on main thread
- [AvaloniaSynchronizationContext.RestoreContext](avaloniasynchronizationcontext-restorecontext.mdx)
- [Dispatcher](dispatcher.mdx) - Provides services for managing work items on a thread.
- [Dispatcher.DispatcherProcessingDisabled](dispatcher-dispatcherprocessingdisabled.mdx)
- [DispatcherEventArgs](dispatchereventargs.mdx) - Provides event data for Dispatcher related events.
- [DispatcherFrame](dispatcherframe.mdx) - Representation of Dispatcher frame.
- [DispatcherOperation](dispatcheroperation.mdx)
- [DispatcherOperationStatus](dispatcheroperationstatus.mdx)
- [DispatcherOperation&lt;T&gt;](dispatcheroperation-1.mdx)
- [DispatcherOptions](dispatcheroptions.mdx) - [AppBuilder](xref:Avalonia.AppBuilder) options for configuring the [Avalonia.Threading.Dispatcher](xref:Avalonia.Threading.Dispatcher).
- [DispatcherPriority](dispatcherpriority.mdx) - Defines the priorities with which jobs can be invoked on a [Avalonia.Threading.Dispatcher](xref:Avalonia.Threading.Dispatcher).
- [DispatcherPriorityAwaitable](dispatcherpriorityawaitable.mdx) - A simple awaitable type that will return a [DispatcherPriorityAwaiter](xref:Avalonia.Threading.DispatcherPriorityAwaiter).
- [DispatcherPriorityAwaitable&lt;T&gt;](dispatcherpriorityawaitable-1.mdx) - A simple awaitable type that will return a [DispatcherPriorityAwaiter](xref:Avalonia.Threading.DispatcherPriorityAwaiter)&lt;T&gt;.
- [DispatcherPriorityAwaiter](dispatcherpriorityawaiter.mdx) - A simple awaiter type that will queue the continuation to a dispatcher at a specific priority.
- [DispatcherPriorityAwaiter&lt;T&gt;](dispatcherpriorityawaiter-1.mdx) - A simple awaiter type that will queue the continuation to a dispatcher at a specific priority.
- [DispatcherTimer](dispatchertimer.mdx) - A timer that is integrated into the Dispatcher queues, and will
be processed after a given amount of time at a specified priority.
- [DispatcherUnhandledExceptionEventArgs](dispatcherunhandledexceptioneventargs.mdx) - Provides data for the [Avalonia.Threading.Dispatcher.UnhandledException](xref:Avalonia.Threading.Dispatcher.UnhandledException) event.
- [DispatcherUnhandledExceptionEventHandler](dispatcherunhandledexceptioneventhandler.mdx) - Represents the method that will handle the [Avalonia.Threading.Dispatcher.UnhandledException](xref:Avalonia.Threading.Dispatcher.UnhandledException) event.
- [DispatcherUnhandledExceptionFilterEventArgs](dispatcherunhandledexceptionfiltereventargs.mdx) - Represents the method that will handle the [Avalonia.Threading.Dispatcher.UnhandledExceptionFilter](xref:Avalonia.Threading.Dispatcher.UnhandledExceptionFilter) event.
- [DispatcherUnhandledExceptionFilterEventHandler](dispatcherunhandledexceptionfiltereventhandler.mdx) - Provides data for the [Avalonia.Threading.Dispatcher.UnhandledExceptionFilter](xref:Avalonia.Threading.Dispatcher.UnhandledExceptionFilter) event.
- [IControlledDispatcherImpl](icontrolleddispatcherimpl.mdx)
- [IDispatcher](idispatcher.mdx) - Dispatches jobs to a thread.
- [IDispatcherImpl](idispatcherimpl.mdx)
- [IDispatcherImplWithExplicitBackgroundProcessing](idispatcherimplwithexplicitbackgroundprocessing.mdx)
- [IDispatcherImplWithPendingInput](idispatcherimplwithpendinginput.mdx)
</ApiRefPage>

